# src/controllers/user.controller.ts
@@ -1,7 +1,15 @@
 import { Response } from 'express';
 import { UserService } from '../services/user.service';
-import { UserOutput } from '../dtos/user.dto';
+import {
+  CreateUserInput,
+  QueryUsersInput,
+  UpdateUserInput,
+  UserOutput,
+} from '../dtos/user.dto';
 import { AuthRequest } from '../interfaces/authRequest.interface';
+import { z } from 'zod';
+import { ErrorMessages } from '../constants/message.constant';
+import { UniqueConstraintViolationException } from '../exceptions/UniqueConstraintViolationException';
 
 export class UserController {
   private readonly userService: UserService;
@@ -10,9 +18,9 @@ export class UserController {
     this.userService = new UserService();
   }
 
-  public async me(req: AuthRequest, res: Response): Promise<void> {
+  public async getCurrentUser(req: AuthRequest, res: Response): Promise<void> {
     try {
-      const user = await this.userService.getById(req.user.id);
+      const user = await this.userService.getUserById(req.user.id);
 
       if (!user) {
         res.status(404).json({ message: 'User not found' });
@@ -24,6 +32,141 @@ export class UserController {
       res
         .status(500)
         .json({ message: error?.message || 'Internal Server Error' });
+    }
+  }
+
+  public async getPaginatedUsers(
+    req: AuthRequest,
+    res: Response,
+  ): Promise<void> {
+    try {
+      const {
+        page,
+        limit,
+        search_query: searchQuery,
+        status,
+        sortOrder,
+        sortBy,
+      } = QueryUsersInput.parse(req.query);
+      const { users, count } = await this.userService.getPaginatedUsers(
+        page,
+        limit,
+        sortBy,
+        sortOrder,
+        searchQuery,
+        status,
+      );
+
+      res
+        .status(200)
+        .json({ data: UserOutput.fromEntities(users), meta: { count } });
+    } catch (error) {
+      if (error instanceof z.ZodError) {
+        res.status(400).json({
+          errors: error.errors,
+        });
+      } else {
+        console.error(error);
+        res.status(500).json({
+          message: error?.message || ErrorMessages.InternalServerError,
+        });
+      }
+    }
+  }
+
+  public async getUserById(req: AuthRequest, res: Response): Promise<void> {
+    try {
+      const id = Number(req.params.id);
+      const user = await this.userService.getUserById(id);
+      if (!user) {
+        res.status(404).json({ message: ErrorMessages.UserNotFound });
+      }
+
+      res.status(200).json(UserOutput.fromEntity(user));
+    } catch (error) {
+      console.error(error);
+      res
+        .status(500)
+        .json({ message: error?.message || ErrorMessages.InternalServerError });
+    }
+  }
+
+  public async createUser(req: AuthRequest, res: Response): Promise<void> {
+    try {
+      const createUserInput = CreateUserInput.parse(req.body);
+      const user = await this.userService.createUser(createUserInput);
+      res.status(201).json(UserOutput.fromEntity(user));
+    } catch (error) {
+      if (error instanceof z.ZodError) {
+        res.status(400).json({
+          errors: error.errors,
+        });
+      } else if (error instanceof UniqueConstraintViolationException) {
+        res.status(409).json({
+          message: error?.message,
+        });
+      } else {
+        console.error(error);
+        res.status(500).json({
+          message: error?.message || ErrorMessages.InternalServerError,
+        });
+      }
+    }
+  }
+
+  public async updateUserById(req: AuthRequest, res: Response): Promise<void> {
+    try {
+      const id = Number(req.params.id);
+      const updateUserInput = UpdateUserInput.parse(req.body);
+      const user = await this.userService.updateUserById(id, updateUserInput);
+      if (!user) {
+        res.status(404).json({ message: ErrorMessages.UserNotFound });
+        return;
+      }
+      res.status(200).json(UserOutput.fromEntity(user));
+    } catch (error) {
+      console.error(error);
+      if (error instanceof z.ZodError) {
+        res.status(400).json({
+          errors: error.errors,
+        });
+      } else if (error instanceof UniqueConstraintViolationException) {
+        res.status(409).json({
+          message: error?.message,
+        });
+      } else {
+        console.error(error);
+        res.status(500).json({
+          message: error?.message || ErrorMessages.InternalServerError,
+        });
+      }
+    }
+  }
+
+  public async deleteUserById(req: AuthRequest, res: Response): Promise<void> {
+    try {
+      const id = Number(req.params.id);
+      const user = await this.userService.getUserById(id);
+
+      if (!user) {
+        res.status(404).json({ message: ErrorMessages.UserNotFound });
+        return;
+      }
+
+      await this.userService.deleteUsersByIds([id]);
+      res.status(204).send();
+    } catch (error) {
+      console.error(error);
+      if (error instanceof z.ZodError) {
+        res.status(400).json({
+          errors: error.errors,
+        });
+      } else {
+        console.error(error);
+        res.status(500).json({
+          message: error?.message || ErrorMessages.InternalServerError,
+        });
+      }
     }
   }
 }
